Mas avances con hbs